--- a/front/src/Pages/Home.scss
+++ b/front/src/Pages/Home.scss
@@ -3,9 +3,10 @@
 .home--page {
     width: $default-width;
     height: $default-height;
-    background-image: url("./3224665.jpg");
+    background-image: url("./gantz.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 
     .welcome-msg {
         font-family: $font-webiste;
@@ -14,41 +15,24 @@
         align-items: center;
         text-align: center;
 
-
-
-        margin: 0 auto;
-
-        position: relative;
-        top: 30%;
-
-        border-radius: 50px;
-
-        h1 {
-            font-size: 3.5rem;
-            margin-bottom: 30px;
-            
-
-            span {
-                background-color: #fff;
-                padding: 10px;
-                border-radius: 10px;
-                color: #7F47DE;
-            }
-        }
-
-        h2 {
-            margin-bottom: 20px;
-        }
-
         .link {
             text-decoration: none;
             text-transform: uppercase;
-            background-color: #fff;
+            background-color: #ffffff;
+            color: #000000;
             padding: 20px;
-            width: 150px;
+            width: 180px;
             border-radius: 15px;
-            margin-left: 37%;
-            margin-top: 10%;
+            margin-top: 400px;
+            font-weight: bolder;
+
+            &:hover {
+                transition: all .6s;
+                opacity: 0.9;
+
+                background-color: #000000;
+                color: #ffffff;
+            }
         }
     }
 
