--- a/front/src/Components/Menu/Menu.scss
+++ b/front/src/Components/Menu/Menu.scss
@@ -1,42 +1,126 @@
 @import "../../Utils/Variables.scss";
 
+@keyframes GBsmooth {
+  from {
+    position: relative;
+    left: -200px;
+
+  }
+  to {
+    position: relative;
+    left: 0;
+    transition: all 0.1s;
+  }
+}
 
 .menu {
-    top: 0;
-    left: 0;
-    background-color: #5C110A;
-    height: 100vh;
-    width: 15%;
+  top: 0;
+  left: 0;
+  background-color: #5c110a;
+  height: 100vh;
+  width: 15%;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
 
-    h3 {
-        font-family: $font-webiste;
+  transition: all 0.6s;
+
+  box-shadow: 2px 2px 10px rgba(15, 15, 15, 0.863);
+
+  .bi {
+    position: relative;
+    color: #fff;
+    float: right;
+    right: 40px;
+    top: 3%;
+    font-size: 30px;
+    cursor: pointer;
+  }
+  .BG {
+    width: 250px;
+    position: relative;
+
+    top: 120px;
+
+    animation-name: GBsmooth;
+    animation-duration: 1s;
+  }
+  .menu--itens {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    gap: 20px;
+
+    position: relative;
+    top: 25%;
+
+    font-family: $font-webiste;
+
+    .item-menu-icon {
+      text-decoration: none;
+      text-transform: uppercase;
+      color: #ffffff;
+      margin-bottom: 20px;
+
+      .icon {
+        margin-right: 15px;
+        font-size: 25px;
         position: relative;
-        text-align: center;
-        top: 10%;
+        top: 4px;
+      }
+    }
+  }
+}
+
+.menu--toggled {
+  top: 0;
+  left: 0;
+  background-color: #5c110a;
+  height: 100vh;
+  width: 5%;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
+  transition: all 0.6s;
+
+  box-shadow: 2px 2px 10px rgba(15, 15, 15, 0.863);
+
+  .bi {
+    position: relative;
+    color: #fff;
+    left: 30%;
+    top: 5%;
+    font-size: 30px;
+    margin: 0;
+    cursor: pointer;
+  }
+  .BG {
+    visibility: hidden;
+  }
+  .menu--itens {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    gap: 20px;
+
+    position: relative;
+
+    font-family: $font-webiste;
+
+    .item-menu-icon {
+      visibility: hidden;
+
+      .icon {
+        margin-left: 35px;
+        font-size: 25px;
+        position: relative;
+        top: -120px;
+        visibility: visible;
+        text-decoration: none;
+        text-transform: uppercase;
         color: #ffffff;
-
-        span {
-            font-size: 3rem;
-            margin-bottom: 30px !important;
-        }
+        margin-bottom: 10px;
+      }
     }
-
-    .menu--itens {
-        display: grid;
-        justify-content: center;
-        align-items: center;
-        align-self: center;
-        gap: 20px;
-
-        position: relative;
-        top: 30%;
-
-        font-family: $font-webiste;
-
-        .item-menu-icon {
-            text-decoration: none;
-            text-transform: uppercase;
-            color: #ffffff;
-        }
-    }
+  }
 }
