--- a/front/src/Components/Menu/Menu.scss
+++ b/front/src/Components/Menu/Menu.scss
@@ -62,6 +62,9 @@
       color: #ffffff;
       margin-bottom: 20px;
 
+      animation-name: GBsmooth;
+      animation-duration: 1s;
+
       .icon {
         margin-right: 15px;
         font-size: 25px;
