--- a/front/src/Components/Menu/Menu.scss
+++ b/front/src/Components/Menu/Menu.scss
@@ -124,6 +124,10 @@
         color: #ffffff;
         margin-bottom: 10px;
       }
+
+      .fs {
+        margin-top: -20px;
+      }
     }
   }
 }
