--- a/front/src/Components/Menu/Menu.scss
+++ b/front/src/Components/Menu/Menu.scss
@@ -65,11 +65,18 @@
       animation-name: GBsmooth;
       animation-duration: 1s;
 
+      &:hover {
+        color: #000;
+        transition: all .6s;
+      }
+
       .icon {
         margin-right: 15px;
         font-size: 25px;
         position: relative;
         top: 4px;
+
+
       }
     }
   }
@@ -95,6 +102,8 @@
     font-size: 30px;
     margin: 0;
     cursor: pointer;
+
+
   }
   .BG {
     visibility: hidden;
@@ -123,6 +132,11 @@
         text-transform: uppercase;
         color: #ffffff;
         margin-bottom: 10px;
+
+        &:hover {
+          color: #000;
+          transition: all .6s;
+        }
       }
 
       .fs {
