--- a/front/src/Components/Menu/Menu.scss
+++ b/front/src/Components/Menu/Menu.scss
@@ -26,6 +26,10 @@
 
   box-shadow: 2px 2px 10px rgba(15, 15, 15, 0.863);
 
+  position: absolute;
+
+  z-index: 3;
+
   .bi {
     position: relative;
     color: #fff;
@@ -93,6 +97,10 @@
   transition: all 0.6s;
 
   box-shadow: 2px 2px 10px rgba(15, 15, 15, 0.863);
+
+  position: absolute;
+
+  z-index: 3;
 
   .bi {
     position: relative;
