--- a/front/src/Pages/Home.scss
+++ b/front/src/Pages/Home.scss
@@ -2,7 +2,7 @@
 
 .home--page {
     width: $default-width;
-    height: $default-height;
+    height: $default-height-1;
     background-image: url("./gantz.jpg");
     background-repeat: no-repeat;
     background-size: cover;
