--- a/front/src/Utils/Variables.scss
+++ b/front/src/Utils/Variables.scss
@@ -4,4 +4,5 @@ $font-webiste: "Poppins", sans-serif;
 
 //Dimension 
 $default-width: 100%;
-$default-height: 100vh;
+$default-height-1: 100vh;
+$default-height-2: 110vh;
